[package]
name = "roll-server"
version = "0.1.0"
authors = ["Zach Mitchell <zmitchell@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rand = "0.7"
rocket = { version = "0.4.4", default-features = false}
